<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dim.bleassistant.MainActivity"  >

    <EditText
        android:id="@+id/editWrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textVWrite"
        android:ems="10"
        android:hint="@string/strWrite"
        android:background="@android:color/holo_green_light"
        android:lines="3" >
        
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/checkBoxWriteHex"
        android:layout_alignParentLeft="true"
        android:text="@string/strHex" />

    <CheckBox
        android:id="@+id/checkBoxWriteHex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editWrite"
        android:layout_toRightOf="@+id/textView1"
        android:text="CheckBox" />

    <Button
        android:id="@+id/btnWrite"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editWrite"
        android:layout_below="@+id/editWrite"
        android:text="@string/strSend" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:layout_below="@+id/btnWrite"
        android:layout_marginTop="35dp" 
        android:background="@android:color/holo_blue_light">

        <TextView
            android:id="@+id/textViewRead"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/y100"
            android:text="@string/strRead" />
    </ScrollView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_below="@+id/scrollView1"
        android:layout_marginTop="31dp"
        android:text="@string/strHex" />

    <CheckBox
        android:id="@+id/checkBoxHexRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:text="CheckBox" />

    <Button
        android:id="@+id/btnRead"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBoxHexRead"
        android:layout_alignBottom="@+id/checkBoxHexRead"
        android:layout_alignRight="@+id/scrollView1"
        android:text="@string/strRead" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextTime"
        android:layout_alignBottom="@+id/editTextTime"
        android:layout_alignParentLeft="true"
        android:text="@string/strTime" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxWriteHex"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10" />

    <Button
        android:id="@+id/btnAutoSend"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editTextTime"
        android:layout_toLeftOf="@+id/btnWrite"
        android:text="@string/strAutoSend" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextTime"
        android:layout_alignBottom="@+id/editTextTime"
        android:layout_centerHorizontal="true"
        android:text="@string/strMs" />

    <Button
        android:id="@+id/btnSearchBLE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/strSearchBLE" />

    <Button
        android:id="@+id/btnDisContected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/strDisCon" />

</RelativeLayout>